# sinacor_negs

./: README.md  pyproject.toml  requirements.txt  setup.py
sinacor_negs/: __init__.py  negs.py  reader.py  sinacor_negs.py  utils.py
